--- a/exp_must_azure_test/views/dashboard.handlebars
+++ b/exp_must_azure_test/views/dashboard.handlebars
@@ -15,12 +15,12 @@
 					</svg>
 				</button>
 			</a>
-		</div>
+		 </div>
 		<div class="basis-1/3"></div>
 	</div>
 	<div class='basis-2/3 flex gap-6'>
 		<div class="basis-1/3 rounded-md bg-blue-500 shadow-lg shadow-blue-500/50 flex flex-col gap-6 justify-center items-center">
-			<a href="/" class="h-fit">
+			<a href="dashboard/employee" class="h-fit">
 				<button class="group relative h-fit p-2 rounded-full bg-blue-700 drop-shadow-lg shadow-blue-900">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 fill-blue-900 group-hover:h-12 group-hover:w-12" viewBox="0 0 20 20">
 						<path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zm-2 4a5 5 0 00-4.546 2.916A5.986 5.986 0 0010 16a5.986 5.986 0 004.546-2.084A5 5 0 0010 11z" clip-rule="evenodd" />
@@ -41,7 +41,23 @@
 			</div>
 		</div>
 		<div class="basis-1/3 flex flex-col gap-6">
-			<div class="basis-1/2 rounded-md bg-slate-600 shadow-lg"></div>
+			<div class="basis-1/2 rounded-md bg-slate-600  rounded-md shadow-lg  flex flex-col gap-6 justify-center items-center">
+<!--                <a href="/organigramme" class="h-fit">-->
+<!--                <p class="relative md:text-xl md:font-bold whitespace-pre-line text-center mt-4">Mon organigramme</p>-->
+<!--                    </a>-->
+                <a href="/listFile" class="h-fit">
+                    <button class="group relative h-fit p-2 rounded-full bg-slate-700 drop-shadow-lg shadow-gray-600">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 fill-slate-400 group-hover:h-12 group-hover:w-12" viewBox="2 1 20 20">
+                            <path fill-rule="evenodd" d="M2.25 12.75V12A2.25 2.25 0 014.5 9.75h15A2.25 2.25 0 0121.75 12v.75m-8.69-6.44l-2.12-2.12a1.5 1.5 0 00-1.061-.44H4.5A2.25 2.25 0 002.25 6v12a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18V9a2.25 2.25 0 00-2.25-2.25h-5.379a1.5 1.5 0 01-1.06-.44z" clip-rule="evenodd" />
+                        </svg>
+                    </button>
+                </a>
+
+
+                <p class="relative md:text-xl md:font-bold whitespace-pre-line text-center ">Mes documents administratifs</p>
+                </a>
+            </div>
+
 			<div class="basis-1/2 rounded-md bg-slate-600 shadow-lg"></div>
 		</div>
 		<div class="basis-1/3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50"></div>
