--- a/exp_must_azure_test/views/fichePosteList.handlebars
+++ b/exp_must_azure_test/views/fichePosteList.handlebars
@@ -1,29 +1,29 @@
 <div class="relative top-6 flex justify-center">
 <div class="grow p-4 max-w-3xl bg-slate-800 rounded-lg border shadow-md sm:p-6">
     <div class="flex flex-col justify-center items-center">
-        <h5 class="mb-3 text-base font-semibold text-gray-900 lg:text-xl dark:text-white">
+        <h5 class="mb-3 text-base font-semibold text-white lg:text-xl dark:text-white">
             Liste des fiches de poste
         </h5>
-        <div class="flex flex-row">
-            <p class="ml-5">En attente de validation</p>
-            <div class="ml-3 flex-shrink-0">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 fill-grey-500" viewBox="0 0 20 20" fill="currentColor">
-                    <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
-                </svg>
-            </div>
-            <p class="ml-5">Validé</p>
-            <div class="ml-3 flex-shrink-0">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 fill-lime-500" viewBox="0 0 20 20" fill="currentColor">
-                    <path fill-rule="evenodd" d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
-                </svg>
-            </div>
-            <p class="ml-5">Refusé</p>
-            <div class="ml-3 flex-shrink-0">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 fill-red-500" viewBox="0 0 20 20" fill="currentColor">
-                    <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
-                </svg>
-            </div>
-        </div>
+<!--        <div class="flex flex-row">-->
+<!--            <p class="ml-5">En attente de validation</p>-->
+<!--            <div class="ml-3 flex-shrink-0">-->
+<!--                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 fill-grey-500" viewBox="0 0 20 20" fill="currentColor">-->
+<!--                    <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />-->
+<!--                </svg>-->
+<!--            </div>-->
+<!--            <p class="ml-5">Validé</p>-->
+<!--            <div class="ml-3 flex-shrink-0">-->
+<!--                <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 fill-lime-500" viewBox="0 0 20 20" fill="currentColor">-->
+<!--                    <path fill-rule="evenodd" d="M6.267 3.455a3.066 3.066 0 001.745-.723 3.066 3.066 0 013.976 0 3.066 3.066 0 001.745.723 3.066 3.066 0 012.812 2.812c.051.643.304 1.254.723 1.745a3.066 3.066 0 010 3.976 3.066 3.066 0 00-.723 1.745 3.066 3.066 0 01-2.812 2.812 3.066 3.066 0 00-1.745.723 3.066 3.066 0 01-3.976 0 3.066 3.066 0 00-1.745-.723 3.066 3.066 0 01-2.812-2.812 3.066 3.066 0 00-.723-1.745 3.066 3.066 0 010-3.976 3.066 3.066 0 00.723-1.745 3.066 3.066 0 012.812-2.812zm7.44 5.252a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />-->
+<!--                </svg>-->
+<!--            </div>-->
+<!--            <p class="ml-5">Refusé</p>-->
+<!--            <div class="ml-3 flex-shrink-0">-->
+<!--                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 fill-red-500" viewBox="0 0 20 20" fill="currentColor">-->
+<!--                    <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />-->
+<!--                </svg>-->
+<!--            </div>-->
+<!--        </div>-->
     </div>
 
 <ul class="my-4 space-y-3">
@@ -72,6 +72,7 @@
 
 
         <span class=" text-sm text-white rounded-full bg-slate-600 flex items-center justify-center font-mono p-1 ml-3 w-6 h-6">{{this.nbCandidature}}</span>
+        <span  class="flex items-center justify-center pl-3"> {{this.createdAt}}</span>
         </a>
         </li>
         {{/each}}
