--- a/exp_must_azure_test/views/components/rhDashboardSidebar.handlebars
+++ b/exp_must_azure_test/views/components/rhDashboardSidebar.handlebars
@@ -3,7 +3,7 @@
 		<ul class='space-y-2'>
 			<li>
 				<a
-					href='/ficheposte/list'
+					href='/ficheposte/kanban'
 					class='flex items-center p-2 text-base font-normal text-white rounded-lg hover:bg-gray-700'
 				>
 					<svg
