--- a/Eashire/views/components/chat.handlebars
+++ b/Eashire/views/components/chat.handlebars
@@ -42,7 +42,7 @@
     }
 
     function connectToBackend() {
-        socket = io('https://eashire:3000'); // Assurez-vous que l'URL correspond à l'URL du backend
+        socket = io('https://eashire.com:3000'); // Assurez-vous que l'URL correspond à l'URL du backend
         socket.on('response', function(data) {
             console.log('Response received:', data);
             const messages = document.getElementById('messages');
