--- a/Eashire/views/components/chat.handlebars
+++ b/Eashire/views/components/chat.handlebars
@@ -36,7 +36,7 @@
         }
 
         function connectToBackend() {
-            socket = io('http://51.103.84.76:80'); // Assurez-vous que l'URL correspond à l'URL du backend
+            socket = io('https://3086-45-149-155-124.ngrok-free.app'); // Assurez-vous que l'URL correspond à l'URL du backend
             socket.on('response', function(data) {
                 console.log('Response received:', data);
                 const messages = document.getElementById('messages');
