--- a/Eashire/modules/dossierRecrutement/views/dossierRecrutementCreatePage.handlebars
+++ b/Eashire/modules/dossierRecrutement/views/dossierRecrutementCreatePage.handlebars
@@ -2,19 +2,24 @@
   {{>PageHeader header_text="Création d'un dossier de recrutement"}}
 </div>
 <div class='flex flex-row gap-4 p-6'>
-  <div
-    class='basis-1/4 p-4 max-w-2xl bg-slate-800 rounded-lg border shadow-md sm:p-8 h-fit'
-  >
+  <div class='basis-1/4 p-4 max-w-2xl bg-slate-800 rounded-lg border shadow-md sm:p-8 h-fit'>
     <h1 class="text-xl font-semibold text-center">Ajouter des fichiers au dossier de recrutement</h1>
     <form action={{createDossierLink}} method="post">
       <div class='relative z-0 mb-6 mt-6 w-full group'>
-        <label for='new_fichier_recrutement_title' class='peer-focus:font-medium absolute text-sm text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6'>Nom du fichier demandé</label>
-        <input type='text' id='new_fichier_recrutement_title' name='new_fichier_recrutement_title' class='block py-2.5 px-0 w-full text-sm text-white bg-transparent border-0 border-b-2 border-gray-600 appearance-none focus:border-blue-500 focus:outline-none focus:ring-0 peer' required />
+        <label for='new_fichier_recrutement_title'
+          class='peer-focus:font-medium absolute text-sm text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6'>Nom
+          du fichier demandé</label>
+        <input type='text' id='new_fichier_recrutement_title' name='new_fichier_recrutement_title'
+          class='block py-2.5 px-0 w-full text-sm text-white bg-transparent border-0 border-b-2 border-gray-600 appearance-none focus:border-blue-500 focus:outline-none focus:ring-0 peer'
+          required />
       </div>
 
       <div class='relative z-0 mb-6 mt-6 w-full group'>
-        <label for="new_fichier_recrutement_description" class="block mb-2 text-sm font-medium text-gray-400">Description du fichier demandé</label>
-        <textarea id="new_fichier_recrutement_description" name="new_fichier_recrutement_description" rows="5" cols="33" class="block p-2.5 w-full text-sm text-white bg-gray-700 rounded-lg border border-gray-600 focus:ring-blue-500 focus:border-blue-500 placeholder-gray-400" placeholder="Ecrivez ici la description de l'emploi..." required></textarea>
+        <label for="new_fichier_recrutement_description"
+          class="block mb-2 text-sm font-medium text-gray-400">Description du fichier demandé</label>
+        <textarea id="new_fichier_recrutement_description" name="new_fichier_recrutement_description" rows="5" cols="33"
+          class="block p-2.5 w-full text-sm text-white bg-gray-700 rounded-lg border border-gray-600 focus:ring-blue-500 focus:border-blue-500 placeholder-gray-400"
+          placeholder="Ecrivez ici la description de l'emploi..." required></textarea>
       </div>
 
       <div class='w-fit m-auto'>
@@ -22,34 +27,38 @@
       </div>
     </form>
   </div>
-  <div
-    class='grow pl-4 pb-4 pr-4 pt-0 w-1/4 bg-slate-800 rounded-lg border shadow-md'
-  >
+  <div class='grow pl-4 pb-4 pr-4 pt-0 w-1/4 bg-slate-800 rounded-lg border shadow-md'>
     <div class="w-fit m-auto mt-6">
       <h1 class="text-xl font-semibold text-center">Contenu du dossier</h1>
+    
+      <form action={{sendMailLink}} method="post">
+      
+         <button id="envoyer-mail-button" type="submit"
+            class="flex items-center p-3 text-sm font-bold text-white bg-blue-500 rounded-lg hover:bg-blue-400 group hover:shadow">
+          <span class="ml-2 flex-1 whitespace-nowrap">Envoyer un mail</span>
+         </button>
+      </form>
+
     </div>
     <ul class="flex place-content-around flex-wrap gap-4 mt-4">
       {{#each fichierRecrutement}}
-        <li class="p-4 bg-slate-800 min-w-[40%] max-w-[40%] h-fit rounded-lg border shadow-md sm:p-8">
-          <div class="flex flex-col justify-between content-between">
-            <div class="w-fit m-auto">
-              <h1 class="text-xl font-semibold text-center break-all">{{this.title}}</h1>
-            </div>
-            <div class="w-fit m-auto mt-6 break-all	">
-                {{this.description}}
-            </div>
-            <div class="grow flex flex-row gap-2 m-auto mt-6">
-              <a
-								href={{this.requiredLink}}
-								id="archive-button"
-								class='flex items-center p-3 text-sm font-bold text-white bg-red-700 rounded-lg hover:bg-red-600 group hover:shadow'
-							>
-								{{>trash-outline class="w-5 h-5"}}
-								<span class='ml-2 flex-1 whitespace-nowrap'>Supprimer</span>
-							</a>
-            </div>
+      <li class="p-4 bg-slate-800 min-w-[40%] max-w-[40%] h-fit rounded-lg border shadow-md sm:p-8">
+        <div class="flex flex-col justify-between content-between">
+          <div class="w-fit m-auto">
+            <h1 class="text-xl font-semibold text-center break-all">{{this.title}}</h1>
           </div>
-        </li>
+          <div class="w-fit m-auto mt-6 break-all	">
+            {{this.description}}
+          </div>
+          <div class="grow flex flex-row gap-2 m-auto mt-6">
+            <a href={{this.requiredLink}} id="archive-button"
+              class='flex items-center p-3 text-sm font-bold text-white bg-red-700 rounded-lg hover:bg-red-600 group hover:shadow'>
+              {{>trash-outline class="w-5 h-5"}}
+              <span class='ml-2 flex-1 whitespace-nowrap'>Supprimer</span>
+            </a>
+          </div>
+        </div>
+      </li>
       {{/each}}
     </ul>
   </div>
